--- a/index.html
+++ b/index.html
@@ -14,6 +14,40 @@
 </head>
 <body>
 
+  <header>
+    <div class="container">
+      <nav>
+        <a href="#">
+          <h3>Fun Bus</h3>
+        </a>
+
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <hr/>
+  </header>
+
+  <section>
+    <img src="img/fun-bus.jpg"/>
+  </section>
+
+  <section class="content-section">
+    <div class="container">
+      <div class="text-content">
+        <h2>Welcome To The Fun Bus!</h2>
+        <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+      </div>
+
+      <hr/>
+    </div>
+  </section>
+
   <div class="container home">
 
     <section class="content-section">
