--- a/index.html
+++ b/index.html
@@ -16,18 +16,31 @@
 
   <header>
     <div class="container">
-      <nav>
-        <a href="#">
-          <h3>Fun Bus</h3>
-        </a>
 
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="row">
+        <div class="col-12">
+          <nav>
+
+            <div class="row">
+              <div class="col-5">
+                <a href="#">
+                  <h3>Fun Bus</h3>
+                </a>
+              </div>
+
+              <div class="col-7">
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+
+          </nav>
+        </div>
+      </div>
     </div>
 
     <hr/>
