--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </div>
 
               <div class="col-7">
-                <ul>
+                <ul class="d-flex justify-content-around">
                   <li><a href="#">Home</a></li>
                   <li><a href="#">About Us</a></li>
                   <li><a href="#">Blog</a></li>
