css: add spacing.less

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="col-12">
           <nav>
 
-            <div class="row">
+            <div class="row py-3">
               <div class="col-5">
                 <a href="#">
                   <h3>Fun Bus</h3>
@@ -29,7 +29,7 @@
               </div>
 
               <div class="col-7">
-                <ul class="d-flex justify-content-around">
+                <ul class="d-flex justify-content-around mt-2">
                   <li><a href="#">Home</a></li>
                   <li><a href="#">About Us</a></li>
                   <li><a href="#">Blog</a></li>
