html: wrap banner image in container

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
   </header>
 
   <section>
-    <img src="img/fun-bus.jpg"/>
+    <div class="container">
+      <img src="img/fun-bus.jpg"/>
+    </div>
   </section>
 
   <section class="content-section">
