--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <section class="content-section">
     <div class="container">
-      <div class="text-content">
+      <div class="text-content mt-3">
         <h2>Welcome To The Fun Bus!</h2>
         <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
       </div>
