--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
-<body>
+<body class="home">
 
   <header>
     <div class="container">
@@ -54,67 +54,102 @@
 
   <section class="content-section">
     <div class="container">
-      <div class="text-content mt-3">
+      <div class="text-content my-3">
         <h2>Welcome To The Fun Bus!</h2>
         <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
       </div>
 
-      <hr/>
+      <hr class="hr-dashed"/>
     </div>
   </section>
 
-  <div class="container home">
+  <section class="content-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-6 py-3">
+          <div class="text-content">
+            <h2>Let's Go!</h2>
+            <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p>
+            <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
+          </div>
+        </div>
 
-    <section class="content-section">
-      <div class="text-content">
-        <h2>Let's Go!</h2>
-        <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p>
-        <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
+        <div class="col-6 py-3">
+          <div class="img-content">
+            <img src="img/adventure.jpg" alt="Let's go on an adventure!" class="rounded">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="content-section inverse-content">
+    <div class="container">
+      <div class="row">
+        <div class="col-6 py-3">
+          <div class="img-content">
+              <img src="img/fun.jpg" class="img-fluid rounded" alt="Lets have fun!" class="rounded">
+          </div>
+        </div>
+
+        <div class="col-6 py-3">
+          <div class="text-content">
+            <h2>Adventure Awaits</h2>
+            <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p>
+            <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="content-destination">
+    <div class="container">
+      <hr class="hr-dashed"/>
+
+      <div class="row justify-content-center">
+        <div class="col-8 py-3">
+          <h2>Pick Your Destination</h2>
+          <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
+          <img src="img/destination.jpg" alt="Second slide" class="rounded">
+        </div>
       </div>
 
-      <div class="img-content">
-        <img src="img/adventure.jpg" alt="Let's go on an adventure!">
-      </div>
-    </section>
+      <hr class="hr-dashed"/>
+    </div>
+  </section>
 
-    <section class="content-section inverse-content">
-      <div class="img-content">
-          <img src="img/fun.jpg" class="img-fluid rounded" alt="Lets have fun!">
-      </div>
+  <section class="content-pick">
+    <div class="container">
 
-      <div class="text-content">
-        <h2>Adventure Awaits</h2>
-        <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p>
-        <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
-      </div>
-    </section>
+      <div class="row justify-content-center">
+        <div class="col-4 py-3">
+          <div class="destination">
+            <h4>Fun In The Sun</h4>
+            <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
+            <div class="btn">Sign Me Up!</div>
+          </div>
+        </div>
 
-    <section class="content-destination">
-      <h2>Pick Your Destination</h2>
-      <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-      <img src="img/destination.jpg" alt="Second slide">
-    </section>
+        <div class="col-4 py-3">
+          <div class="destination">
+            <h4>Mountain Excursion</h4>
+            <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
+            <div class="btn">Sign Me Up!</div>
+          </div>
+        </div>
 
-    <section class="content-pick">
-      <div class="destination">
-        <h4>Fun In The Sun</h4>
-        <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
-      </div>
+        <div class="col-4 py-3">
+          <div class="destination">
+            <h4>Island Getaway</h4>
+            <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
+            <div class="btn">Sign Me Up!</div>
+          </div>
+        </div>
 
-      <div class="destination">
-        <h4>Mountain Excursion</h4>
-        <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
       </div>
-
-      <div class="destination">
-        <h4>Island Getaway</h4>
-        <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
-      </div>
-    </section>
-  </div><!-- container -->
+    </div>
+  </section>
 
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
