css: Create a parametric mixin for missing button styles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
   </section>
 
-  <section class="content-section">
+  <section>
     <div class="container">
       <div class="text-content my-3">
         <h2>Welcome To The Fun Bus!</h2>
@@ -63,7 +63,7 @@
     </div>
   </section>
 
-  <section class="content-section">
+  <section>
     <div class="container">
       <div class="row">
         <div class="col-6 py-3">
@@ -83,7 +83,7 @@
     </div>
   </section>
 
-  <section class="content-section inverse-content">
+  <section>
     <div class="container">
       <div class="row">
         <div class="col-6 py-3">
@@ -127,7 +127,7 @@
           <div class="destination">
             <h4>Fun In The Sun</h4>
             <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-            <div class="btn">Sign Me Up!</div>
+            <div class="btn-green">Sign Me Up!</div>
           </div>
         </div>
 
@@ -135,7 +135,7 @@
           <div class="destination">
             <h4>Mountain Excursion</h4>
             <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-            <div class="btn">Sign Me Up!</div>
+            <div class="btn-green">Sign Me Up!</div>
           </div>
         </div>
 
@@ -143,7 +143,7 @@
           <div class="destination">
             <h4>Island Getaway</h4>
             <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-            <div class="btn">Sign Me Up!</div>
+            <div class="btn-green">Sign Me Up!</div>
           </div>
         </div>
 
