--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 px-0">
           <nav>
 
             <div class="row py-3">
-              <div class="col-5">
+              <div class="col-5 px-0 text-sm-center">
                 <a href="#">
                   <h3>Fun Bus</h3>
                 </a>
