css: ensure content reversed for mobile

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <section>
     <div class="container">
-      <div class="row">
+      <div class="row flex-sm-column-reverse">
         <div class="col-6 py-3">
           <div class="img-content">
               <img src="img/fun.jpg" class="img-fluid rounded" alt="Lets have fun!" class="rounded">
