--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="row py-3">
               <div class="col-5 px-0 text-sm-center">
                 <a href="#">
-                  <h3>Fun Bus</h3>
+                  <h3 class="anim-sm-text-shadow-drop-bl">Fun Bus</h3>
                 </a>
               </div>
 
